Fix vertical alignment in header

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ html {
 .wrapper {
   margin: 0 auto;
   display: flex;
+  align-items: center;
   max-width: 1440px;
 }
 
